--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -22,7 +22,7 @@
               <a class="nav-link" href="/index.html">STRONA GŁÓWNA <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="kontakt.html">KONTAKT</a>
+              <a class="nav-link" href="kontakt.html">FAQ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
