--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
              <div class="service">
                 <i class="fas fa-laptop-code"></i>
                <a href=""><h2>Team</h2> </a>
-                <p>deejvid#0001 <br> everylight15#6833</p>
+                <p>wenecjvsz#2211 <br> everylight15#6833</p>
          
                  </div>
 
