--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>RainboweekDev</title>
     <link rel="icon" href="images/">
     <link rel="stylesheet" href="style.css">
+    <meta name="keywords" content="rainboweek,xd,elo,strona,witam,yt,youtube,rainbowka,www,internetowa,dc,minecraft,popular,popular song,popular songs,popular cat,musica popular,popular monster,new popular songs,popular song mika,popular songs 2020,popular cat videos,popular song lyrics,ronnie radke popular monster,falling in reverse popular monster,popular monster falling in reverse,roblox copied versions of popular games,i played copied versions of popular roblox games..,nada,surf,popular,pop,pop 2020,pop hits,pop song,pop radio,pop songs,pop music,hilarious,top pop song,pop hits 2020,new pop songsfame,roblox fame,fame roblox,games,fame (musical),fame (1980 film),fame gamingwithkev,scary games,horror games,games for kids,roblox fame gamingwithkev,roblox fame gaming with kev,gaming with kev roblox fame,game,famous,jam,gameplay,game play,irene,cara,fame,fail,mets,theme,comedy,young americans,themes,flamingo,flamingo funny moments,miracle mets,new york mets,flamingo funny,tom seaver mets,gaming with kev,entertainment,roblox funny moments,gaming with kev roblox">
     <script src="https://kit.fontawesome.com/5b4cc47b61.js" crossorigin="anonymous"></script>
 </head>
 <body>
