--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8936197298402747"
+     crossorigin="anonymous"></script>
     <meta name="theme-color" content="#00ff22">
     <meta name="description" content=":)">
     <meta charset="UTF-8">
